<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2018-2021 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Dirac settings -->
    <string name="dirac_enable">Enable dirac</string>
    <string name="dirac_title">Dirac sound enhancer</string>
    <string name="dirac_audio_title">Audio scenario</string>
    <string name="dirac_preset_title">Sound preset</string>
    <string name="dirac_preamp_volume_title">Preamp volume</string>

    <!-- Dirac settings: audio scenarios -->
    <string name="dirac_scenario_music">Music</string>
    <string name="dirac_scenario_movie">Movie</string>
    <string name="dirac_scenario_game">Game</string>
    <string name="dirac_scenario_speech">Speech</string>

    <!-- Dirac settings: equalizer presets -->
    <string name="dirac_preset_default">Default</string>
    <string name="dirac_preset_rock">Rock</string>
    <string name="dirac_preset_jazz">Jazz</string>
    <string name="dirac_preset_pop">Pop</string>
    <string name="dirac_preset_classical">Classical</string>
    <string name="dirac_preset_hiphop">Hip Hop</string>
    <string name="dirac_preset_blues">Blues</string>
    <string name="dirac_preset_electronic">Electronic</string>
    <string name="dirac_preset_country">Country</string>
    <string name="dirac_preset_dance">Dance</string>
    <string name="dirac_preset_metal">Metal</string>
</resources>
